--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build-all": "npm run build-node && npm run build-android && npm run build-ios",
     "revive-android": "npm run clean-node && npm run clean-android && npm run build-android && npm start -- --reset-cache",
     "revive-ios": "npm run clean-node && npm run clean-ios && npm run build-ios && npm start -- --reset-cache",
-    "revive-all": "npm run revive-android && npm run revive-ios"
+    "revive-all": "npm run clean-all && npm run build-all && npm start -- --reset-cache"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.0.0",
@@ -26,6 +26,7 @@
     "@react-navigation/drawer": "6.7.2",
     "@react-navigation/native": "6.1.18",
     "@react-navigation/native-stack": "6.11.0",
+    "@types/react-native-dotenv": "0.2.2",
     "@types/react-native-vector-icons": "6.4.18",
     "axios": "1.7.7",
     "react": "18.3.1",
@@ -55,6 +56,7 @@
     "@types/react-test-renderer": "18.0.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "29.6.3",
+    "babel-plugin-module-resolver": "5.0.2",
     "eslint": "8.57.1",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
