--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "react-native-dotenv": "3.4.11",
     "react-native-fast-image": "8.6.3",
     "react-native-gesture-handler": "2.20.2",
-    "react-native-linear-gradient": "^2.8.3",
+    "react-native-linear-gradient": "2.8.3",
     "react-native-reanimated": "3.16.1",
     "react-native-safe-area-context": "4.13.1",
     "react-native-screens": "3.35.0",
-    "react-native-toast-message": "^2.2.1",
+    "react-native-toast-message": "2.2.1",
     "react-native-vector-icons": "10.2.0",
     "react-native-webview": "13.12.3"
   },
