--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-native-safe-area-context": "4.13.1",
     "react-native-screens": "3.35.0",
     "react-native-toast-message": "2.2.1",
-    "react-native-uuid": "^2.0.3",
+    "react-native-uuid": "2.0.3",
     "react-native-vector-icons": "10.2.0",
     "react-native-webview": "13.12.3"
   },
