--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
     "@react-navigation/drawer": "6.7.2",
     "@react-navigation/native": "6.1.18",
     "@react-navigation/native-stack": "6.11.0",
-    "@types/react-native-dotenv": "0.2.2",
+    "@reduxjs/toolkit": "2.4.0",
     "@types/react-native-vector-icons": "6.4.18",
     "axios": "1.7.7",
     "react": "18.3.1",
     "react-native": "0.76.1",
-    "react-native-dotenv": "3.4.11",
     "react-native-fast-image": "8.6.3",
     "react-native-gesture-handler": "2.20.2",
     "react-native-linear-gradient": "2.8.3",
@@ -39,7 +38,7 @@
     "react-native-toast-message": "2.2.1",
     "react-native-uuid": "2.0.3",
     "react-native-vector-icons": "10.2.0",
-    "react-native-webview": "13.12.3"
+    "react-redux": "9.1.2"
   },
   "devDependencies": {
     "@babel/core": "7.25.2",
@@ -55,6 +54,7 @@
     "@react-native/typescript-config": "0.76.1",
     "@types/node": "22.8.7",
     "@types/react": "18.2.6",
+    "@types/react-native-dotenv": "0.2.2",
     "@types/react-test-renderer": "18.0.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "29.6.3",
@@ -68,6 +68,7 @@
     "globals": "15.11.0",
     "jest": "29.6.3",
     "prettier": "3.3.3",
+    "react-native-dotenv": "3.4.11",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4",
     "typescript-eslint": "8.12.2"
