--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,14 @@
     "baseUrl": ".",
     "paths": {
       "@assets/*": ["src/assets/*"],
+      "@actions/*": ["src/actions/*"],
       "@components/*": ["src/components/*"],
       "@config/*": ["src/config/*"],
       "@constants": ["src/constants"],
       "@constants/*": ["src/constants/*"],
       "@navigation/*": ["src/navigation/*"],
       "@network/*": ["src/network/*"],
+      "@reducers/*": ["src/reducers/*"],
       "@screens/*": ["src/screens/*"],
       "@themes": ["src/themes"],
       "@themes/*": ["src/themes/*"],
