--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,15 +5,15 @@
     "baseUrl": ".",
     "paths": {
       "@assets/*": ["src/assets/*"],
-      "@actions/*": ["src/actions/*"],
       "@components/*": ["src/components/*"],
       "@config/*": ["src/config/*"],
       "@constants": ["src/constants"],
       "@constants/*": ["src/constants/*"],
       "@navigation/*": ["src/navigation/*"],
       "@network/*": ["src/network/*"],
-      "@reducers/*": ["src/reducers/*"],
       "@screens/*": ["src/screens/*"],
+      "@store": ["src/store"],
+      "@store/*": ["src/store/*"],
       "@themes": ["src/themes"],
       "@themes/*": ["src/themes/*"],
       "@utility": ["src/utility"],
