--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "6.1.18",
     "@react-navigation/native-stack": "6.11.0",
     "@reduxjs/toolkit": "2.4.0",
+    "@tanstack/react-query": "5.62.3",
     "@types/react-native-vector-icons": "6.4.18",
     "axios": "1.7.7",
     "react": "18.3.1",
@@ -44,6 +45,7 @@
     "@react-native/eslint-config": "0.76.1",
     "@react-native/metro-config": "0.76.1",
     "@react-native/typescript-config": "0.76.1",
+    "@tanstack/eslint-plugin-query": "5.62.1",
     "@types/node": "22.8.7",
     "@types/react": "18.2.6",
     "@types/react-native-dotenv": "0.2.2",
