--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-toast-message": "2.2.1",
     "react-native-uuid": "2.0.3",
     "react-native-vector-icons": "10.2.0",
+    "react-native-wifi-reborn": "^4.13.0",
     "react-redux": "9.1.2"
   },
   "devDependencies": {
