--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-uuid": "2.0.3",
     "react-native-vector-icons": "10.2.0",
     "react-native-wifi-reborn": "4.13.0",
-    "react-redux": "9.1.2"
+    "react-redux": "9.1.2",
+    "redux-saga": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.25.2",
